--- a/src/targets/excelsior/styles/views/reservations.less
+++ b/src/targets/excelsior/styles/views/reservations.less
@@ -180,7 +180,7 @@
 
           check-in-date {
             position: absolute;
-            bottom: 20px;
+            bottom: 10px;
             right: 0;
             border: 2px solid #AB2117;
             clear: right;
@@ -188,10 +188,6 @@
             width: 80px;
             text-align: center;
             border-radius: 6px;
-
-            .viewport-mobile & {
-              right: 10px;
-            }
 
             .title {
               background-color: #AB2117;
@@ -212,6 +208,10 @@
               font-weight: bold;
               line-height: 47px;
             }
+          }
+
+          .reservation-details-container {
+            padding-right: 90px;
           }
         }
 
